golem_sdk_tools/.mooncakes/moonbitlang/parser/test/sync_test/__snapshot__/parse_test_bytes_literal.mbt
fn init {
  let a = b"moonbit_rabbit"
} 

fn error() -> Unit {
  let _ = b"moonbitğŸ‡rabbitğŸ°" // error: ASCII in bytes literal is not allowed
  let _ = b"\xGG" // error: invalid hex escape
  let _ = b"\oFFF" // error: invalid oct escape
}

let g = b"unfinished bytes literal

  